--- a/Assignment2/package.json
+++ b/Assignment2/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^1.19.1"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
   }
 }
